--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
   </style>
 </head>
 <body
-  data-title="For Noor Aliya Rahma Tuffahty"
+  data-title="For Noor Aliya Rahma Tuffahaty"
   data-subtext="dari cinta Dafa Pradipta… aku buat ini karena kamu perempuan yang pantas diperlakukan dengan segala cara dan kebaikan.
 setiap senyum kamu selalu ngingetin aku, kalo kamu itu indah dan layak diperlakukan dengan baik.
 semoga hal kecil ini bisa jadi cara sederhana buat nunjukin betapa berharganya kamu di mataku sayangg. 🌷"
