--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Surprise romantic blooming flower for Noor Aliya Rahma Tuffahty — single-file animation ready for GitHub Pages."/>
-  <title>For Noor Aliya Rahma Tuffahty</title>
+  <title>For Noor Aliya Rahma Tuffahaty</title>
 
   <!-- Google Font (allowed) -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
       --petal-grad-2: #b36bff; /* purple */
       --petal-grad-3: rgba(255,255,255,0.06);
       --petal-count: 8; /* visual count */
-      --title-text: "For Noor Aliya Rahma Tuffahty"; /* fallback editable via CSS */
+      --title-text: "For Noor Aliya Rahma Tuffahaty"; /* fallback editable via CSS */
       --subtitle-text: "Dengan cinta, Dafa";           /* fallback editable via CSS */
       --petal-size: 110px; /* base size for petals */
       --animation-duration: 6.5s;
